待到毕业七月八,满城尽带黄金甲